Use toURL instead of manually crafting it
Test: unit tests
Bug: None
Change-Id: Ic24292fab250fc7e9041207f35acd79a839734e3